--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dependencies": {
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "@google/generative-ai": "^0.21.0",
+        "pdfjs-dist": "^4.0.379",
+        "groq-sdk": "^0.3.3",
         "lucide-react": "^0.468.0"
     },
     "devDependencies": {
